-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
b64
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8082635 | emb-9 | Roland Westrelin | P3 | Resolved | Fixed | team |
The test compiler/rangechecks/TestExplicitRangeChecks.java fails in the compiler nightlies. Here is an excerpt of the test's output:
CompileCommand: compileonly TestExplicitRangeChecks.test*
test1 not deoptimized on invalid access
test1 not deoptimized on invalid access
test2 not deoptimized on invalid access
test2 not deoptimized on invalid access
test3 not deoptimized on invalid access
test3 not deoptimized on invalid access
test4 not deoptimized on invalid access
test4 not deoptimized on invalid access
test5 not deoptimized on invalid access
test5 not deoptimized on invalid access
test6 not deoptimized on invalid access
test6 not deoptimized on invalid access
test7 not deoptimized on invalid access
test7 not deoptimized on invalid access
test8 not deoptimized on invalid access
test8 not deoptimized on invalid access
test9 not deoptimized on invalid access
test9 not deoptimized on invalid access
test11 not deoptimized on invalid access
test12 not deoptimized on invalid access
test14 not deoptimized on invalid access
test14 not deoptimized on invalid access
test16 not deoptimized on invalid access
test16 not deoptimized on invalid access
test17 not deoptimized on invalid access
test17 not deoptimized on invalid access
----------System.err:(13/730)----------
java.lang.RuntimeException: some tests failed
at TestExplicitRangeChecks.main(TestExplicitRangeChecks.java:593)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:502)
at com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
at java.lang.Thread.run(Thread.java:745)
JavaTest Message: Test threw exception: java.lang.RuntimeException: some tests failed
JavaTest Message: shutting down test
CompileCommand: compileonly TestExplicitRangeChecks.test*
test1 not deoptimized on invalid access
test1 not deoptimized on invalid access
test2 not deoptimized on invalid access
test2 not deoptimized on invalid access
test3 not deoptimized on invalid access
test3 not deoptimized on invalid access
test4 not deoptimized on invalid access
test4 not deoptimized on invalid access
test5 not deoptimized on invalid access
test5 not deoptimized on invalid access
test6 not deoptimized on invalid access
test6 not deoptimized on invalid access
test7 not deoptimized on invalid access
test7 not deoptimized on invalid access
test8 not deoptimized on invalid access
test8 not deoptimized on invalid access
test9 not deoptimized on invalid access
test9 not deoptimized on invalid access
test11 not deoptimized on invalid access
test12 not deoptimized on invalid access
test14 not deoptimized on invalid access
test14 not deoptimized on invalid access
test16 not deoptimized on invalid access
test16 not deoptimized on invalid access
test17 not deoptimized on invalid access
test17 not deoptimized on invalid access
----------System.err:(13/730)----------
java.lang.RuntimeException: some tests failed
at TestExplicitRangeChecks.main(TestExplicitRangeChecks.java:593)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:502)
at com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
at java.lang.Thread.run(Thread.java:745)
JavaTest Message: Test threw exception: java.lang.RuntimeException: some tests failed
JavaTest Message: shutting down test
- backported by
-
JDK-8082635 compiler/rangechecks/TestExplicitRangeChecks.java fails in compiler nightlies
-
- Resolved
-
- relates to
-
JDK-8073480 C2 should optimize explicit range checks
-
- Resolved
-