8075663: compiler/rangechecks/TestExplicitRangeChecks.java fails in compiler nightlies

-Xmixed following -Xcomp doesn't undo the effect of -Xcomp with tiered on

Reviewed-by: kvn, vlivanov